--- a/netflix.html
+++ b/netflix.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+	<link rel="stylesheet" href="joker.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -17,69 +18,101 @@
 	}
 	
 	form{
-		width: 700px;
-		height: 700px;
-		background-color: black;
 		
-		box-shadow: 10px 15px 10px 15px black;
-		border-radius: 70px;
+		background-color: black;
+		border-radius: 50px;
+		padding: 20px;
+	    margin-top: 20px;
 	}
 	
 	.sign{
-		width: 500px;
-		height: 60px;
 		background-color: red;
 		font-family: bold;
 		font-size: 30px;
+		
 	}
-	nav{
-		background-color: darkred;
-		width: 100%;
-	}
-	nav img{
-		margin-left: 400px;
-		width: 100px;
-		 height: 70px;
-	}
+
+	
+	
 </style>
 
 </head>
 <body>
-	<nav>
-		 <a href="index.html"><i class="fa fa-home" aria-hidden="true" style="font-size:60px; color:white;"></i></a>
-		<img src="images/netflix.png">
-	</nav>
-
-	<form class=" mx-auto col-10 col-md-8 col-lg-6">
-		<div class="text-center one">
-			<h1>Sign In</h1>
-  <div class="mb-3">
-    <input type="email" class="p-3 my-5 form-control" placeholder="Email or Phone ">
-</div>
-  <div class="mb-3">
-    <input type="password" class="p-3 my-5 form-control" placeholder="password">
-  </div>
-  <div class="mb-3">
-    <label class=" text-center sign">Sign in</label>
-  </div><div class="row">
- <div class="col">
- 	<input class="form-check-input" type="checkbox" id="inlineFormCheck">
-          <label class="form-check-label" for="gridCheck">
-            Remember
-          </label>
-        </div>
-        <div class="col">
-        	  <label class="text-end form-check-label" for="gridCheck">
-            Need help?
-          </label>
-        </div>
-    </div><br><br>
-
-    <p><i class="fa fa-facebook-official" aria-hidden="true" style="color: blue;"></i>  Login with Facebook</p>
-    <p>New to Netflix? <span style="font-weight: bold;">Sign up now</span></p>
-
-</div>
-</form>
-
-</body>
+	<!-- Main Nav -->
+	<nav class="navbar navbar-expand-lg bg-dark fixed-top">
+		<div class="container">
+		  <a class="navbar-brand text-white" href="index.html" style="margin-left: 43px;">Home</a>
+		  <button class="navbar-toggler bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-3">
+			  <li class="nav-item mx-3 nav-imbd">
+				<a class="nav-link active text-white" aria-current="page">Imbd</a>
+			  </li>
+			  <li class="nav-item mx-3">
+				<a class="nav-link text-white" href="hero.html">Awards</a>
+			  </li>
+			  <li class="nav-item dropdown mx-3">
+				<a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+				  aria-expanded="false">
+				  About
+				</a>
+				<ul class="dropdown-menu  bg-dark ">
+					<li><a class="text-decoration-none text-white" href="hero.html">Hero</a></li>
+					<li><a class="text-decoration-none text-white" href="cast.html"> Cast</a></li>
+					<li>
+					  <hr class="dropdown-divider">
+					</li>
+					<li><a class="text-decoration-none text-white" href="netflix.html">Netflix</a></li>
+				  </ul>
+				</li>
+			  </ul>
+			<div class="d-flex" role="search ">
+			  <input class="form-control" type="search" placeholder="JOKER" aria-label="Search">
+			  <button class="btn btn-outline-success me-auto " type="submit">Search</button>
+			</div>
+		  </div>
+		</div>
+	  </nav>
+	
+  
+	
+	<div class="container mt-5"> 
+		<div class="row justify-content-center align-items-center w-100"> <!-- Centering the form within the container -->
+			<div class="col-12 col-sm-10 col-md-6 col-lg-6">
+				<form class="p-3 mt-5">
+					<div class="text-center one">
+						<h1>Sign In</h1>
+						<div class=" mb-3 mx-3 mx-md-5">
+							<input type="email" class="p-3 my-5 form-control" placeholder="Email or Phone">
+						</div>
+						<div class="mb-3 mx-3 mx-md-5">
+							<input type="password" class="p-3 my-5 form-control" placeholder="Password">
+						</div>
+						<div class="mb-3">
+							<button class="btn text-center sign w-50">Sign in</button>
+						</div>
+						<div class="row">
+							<div class="col">
+								<input class="form-check-input" type="checkbox" id="inlineFormCheck">
+								<label class="form-check-label" for="gridCheck">
+									Remember
+								</label>
+							</div>
+							<div class="col">
+								<label class="text-end form-check-label" for="gridCheck">
+									Need help?
+								</label>
+							</div>
+						</div><br><br>
+						<p><i class="fa fa-facebook-official" aria-hidden="true" style="color: blue;"></i>  Login with Facebook</p>
+						<p>New to Netflix? <span style="font-weight: bold;">Sign up now</span></p>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	
+	</body>
 </html>
